# OpenBlog

./: .env.example  .env.local.example  .gitignore  AGENTS.md  Makefile  README.md  TESTING.md  alembic.ini  babel.cfg  bandit_report.txt  docker-compose.yml  gunicorn.conf.py  pyproject.toml  test_bk.txt  test_full_result.txt  test_results.txt  test_rh_result.txt
.copilot/: action-plan.md
.github/workflows/: ci.yml
backend/: app.py  celery_worker.py  config.py  extensions.py
backend/ai/: __init__.py
backend/email/: mail_service.py
backend/migrations/: env.py
backend/models/: __init__.py  ab_experiment.py  admin.py  ai_review.py  analytics.py  analytics_explanation.py  badge.py  benchmark.py  bookmark.py  comment.py  comment_attachment.py  content_link.py  digest_run.py  email_delivery_log.py  follow.py  newsletter.py  notification.py  notification_preference.py  ontology.py  pinned_post.py  playbook.py  portal.py  post.py  post_release_note.py  post_version.py  prompt_metadata.py  report.py  reputation_event.py  reputation_total.py  revision.py  subscription.py  tag.py  thread_subscription.py  user.py  user_post_read.py  vote.py  workspace.py
backend/routes/: ab_experiments.py  admin.py  admin_ontology.py  admin_ops.py  ai_reviews.py  attachments.py  auth.py  badges.py  benchmarks.py  bookmarks.py  content_links.py  drafts.py  explore.py  feed.py  fork_recommendations.py  health.py  i18n.py  improvements.py  index.py  intelligence.py  invites.py  json_feed.py  leaderboards.py  newsletter.py  notifications.py  ontology.py  pages.py  posts.py  prompts.py  reputation.py  revisions.py  search.py  settings.py  sitemap.py  (+5 more)
docker/: Dockerfile
docs/: OPS.md
tests/: conftest.py  test_ab_experiments_comparison.py  test_ab_experiments_crud.py  test_ab_experiments_runs.py  test_ab_experiments_scope_isolation.py  test_admin.py  test_admin_dashboard_analytics.py  test_admin_ops.py  test_admin_reports.py  test_ai_reviews.py  test_ai_suggestions_to_revision.py  test_analytics_api.py  test_analytics_service.py  test_attachments.py  test_auth_api.py  test_autosave.py  test_badge_api.py  test_badge_awarding.py  test_badge_idempotency.py  test_badge_profile_rendering.py  test_badge_scope_isolation.py  test_badge_service.py  test_badge_thresholds.py  test_benchmark_crud.py  test_benchmark_results_integrity.py  test_benchmark_runs_async.py  test_benchmark_scope_isolation.py  test_bookmark_api.py  test_bookmark_service.py  test_bookmarks_ssr.py  test_comment_api.py  test_comment_service.py  test_compare_diff.py  test_content_link_suggestions.py  test_content_links_crud.py  test_content_links_rendering.py  test_content_links_scope_isolation.py  test_content_ontology_mapping_scope.py  test_contribution_graph_service.py  test_contributor_cards_determinism.py  (+119 more)
(+274 files in other folders)
